fix z-index

--- a/styles/Post.module.scss
+++ b/styles/Post.module.scss
@@ -24,7 +24,7 @@
     flex-direction: column;
     align-items: center;
     gap: 10px;
-    z-index: 6;
+    z-index: 7;
 
     &__box {
       width: $editWidth - 20;
